# CanadianExperience

./: CSE 335 Project 2 Movie.anim  README.md
CanadianExperienceLib/: MachineDrawable.cpp  MachineDrawable.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  ViewEdit.cpp  ViewEdit.h
MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  INegotiator.cpp  INegotiator.h  Lever.cpp  Lever.h  MachineDerived.cpp  MachineDerived.h  MachineFactory.cpp  MachineFactory.h  MachineFactory1.cpp  MachineFactory1.h  MachineFactory2.cpp  MachineFactory2.h  Motor.cpp  Motor.h  Piston.cpp  Piston.h  Polygon.cpp  Polygon.h  PositionSink.cpp  PositionSink.h  PositionSource.cpp  PositionSource.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RodSource.cpp  RodSource.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  (+3 more)
resources/xrc/: main.fbp
